--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="ja">
+<html>
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width">
  <title><%= htmlWebpackPlugin.options.title %></title>
- <script defer src="index.js"></script>
+ <script src="index.js"></script>
 </head>
 <body>
- <div id="app"></div>
+ <div id="root"></div>
 </body>
 </html>
